# ImplementingTransformer

./: Practical_1.ipynb  Practical_10.ipynb  Practical_11.ipynb  Practical_2.ipynb  Practical_3.ipynb  Practical_4.ipynb  Practical_5.ipynb  Practical_7.ipynb  Practical_8.ipynb  Practical_9.ipynb
pytests/: practical_4_test.py  practical_5_encoder_layer_tests.py  practical_5_mha_tests.py  practical_6.py
report/: main.tex
tokenizer_cache/: vocab.json
transformer_project/: .gitignore  README.md  __init__.py  data_cleaning.py  dataset.py  evaluate_checkpoint.py  kv_cache_analysis.py  main.py  optimization.py  practical10.py  pyproject.toml  run_comparison.py  tokenizer.py  tokenizer_wrapper.py
transformer_project/configs/: wmt17_gqa.yaml  wmt17_rope.yaml  wmt17_sinusoidal.yaml
transformer_project/modelling/: __init__.py  attention.py  embedding.py  feedforward.py  functional.py  layer_norm.py  positional_encoding.py  scheduler.py  transformer.py
transformer_project/text/: __init__.py  transformer_tokenizer.py
